--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </div>
   </div>
 
-  <script>
+ <script>
   const quizData = [
     { q: "What is Polygon Miden primarily focused on?", options: ["Proof of Stake scaling", "ZK-rollup with client-side proving", "Layer 1 blockchain consensus", "Cross-chain bridges"], answer: 1 },
     { q: "What virtual machine does Miden use?", options: ["Cairo VM", "EVM", "Miden VM", "Move VM"], answer: 2 },
@@ -268,4 +268,6 @@
     intro.innerHTML = `
       <p style="color:#ff7a00; font-weight:600;">You’ve already completed the Miden IQ Test.</p>
       <p style="color:#64748b;">Your browser remembers your attempt. You can’t retake it.</p>
-  
+    `;
+  }
+</script>
